0.20.0:

* wrapped 0.20.0 version of vte.
  API/ABI compatible with 0.16.4, 0.17.1 and 0.19.0. (Krzesimir Nowak)

0.20.1

* most changes backported from 0.19.1. (Krzesimir Nowak)

0.20.2

* added new API (const getter methods) and fixed some memleaks.
  (Krzesimir Nowak)

0.20.3

* This release is API/ABI _incompatible_ with previous releases.
(deprecated methods and reaper were removed, beep signal have a default
signal handler, 'commit' signal, get_cursor_position and get_padding
have changed prototypes.)
* API is bumped to version 1.1.
* libvtemm-1.1 is can be installed in parallel with version 1.0.
* Dependencies: vte >= 0.20, gtkmm-2.4 >= 2.14, glibmm-2.4 >= 2.18.