@@ -181,8 +181,8 @@ public:
   _WRAP_METHOD(void set_pty(int pty_master), vte_terminal_set_pty)
   _WRAP_METHOD(int get_pty() const, vte_terminal_get_pty)
 
-  _WRAP_METHOD(Gtk::Adjustment* get_adjustment(), vte_terminal_get_adjustment)
-  _WRAP_METHOD(Gtk::Adjustment const* get_adjustment() const, vte_terminal_get_adjustment, constversion)
+  _WRAP_METHOD(Gtk::Adjustment& get_adjustment(), vte_terminal_get_adjustment)
+  _WRAP_METHOD(const Gtk::Adjustment& get_adjustment() const, vte_terminal_get_adjustment, constversion)
   _WRAP_METHOD(long get_char_width() const, vte_terminal_get_char_width)
   _WRAP_METHOD(long get_char_height() const, vte_terminal_get_char_height)
 //  _WRAP_METHOD(long get_char_descent() const, vte_terminal_get_char_descent, deprecated)
@@ -255,7 +255,7 @@ dnl // C prototype: void commit(gchar* text, guint size)
   _WRAP_SIGNAL(void text_scrolled(int delta), "text-scrolled")
   _WRAP_SIGNAL(void copy_clipboard(), "copy-clipboard")
   _WRAP_SIGNAL(void paste_clipboard(), "paste-clipboard")
-  _WRAP_SIGNAL(void set_scroll_adjustments(Gtk::Adjustment* hadjustment, Gtk::Adjustment* vadjustment), "set-scroll-adjustments", no_default_handler)
+  _WRAP_SIGNAL(void set_scroll_adjustments(Gtk::Adjustment& hadjustment, Gtk::Adjustment& vadjustment), "set-scroll-adjustments", no_default_handler)
   _WRAP_SIGNAL(void beep(), "beep")
   
   _WRAP_PROPERTY("allow-bold", bool)
