@@ -18,7 +18,7 @@ _CONVERSION(`Gtk::MenuShell&', `GtkMenuShell*',`($3).gobj()')
 _CONVERSION(`long&',`glong*',`&($3)')
 _CONVERSION(`Gdk::Cursor&',`GdkCursor*',`($3).gobj_copy()')
 _CONVERSION(`const char*',`const Glib::ustring&',__GCHARP_TO_USTRING)
-_CONVERSION(`GtkAdjustment*',`Gtk::Adjustment*',`Glib::wrap($3)')
+_CONVERSION(`GtkAdjustment*',`Gtk::Adjustment&',`*(Glib::wrap($3))')
 _CONVERSION(`const Terminal&',`VteTerminal*', __FR2P)
 _CONVERSION(`const std::string&', `const char*', `($3).c_str()')
 _CONVERSION(`const StdStringArrayHandle&', `char**', `const_cast<char**>(($3).data())')
